--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "handlebars": "^4.7.7",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0",
+    "uniqid": "^5.4.0",
     "uuid": "^8.3.2"
   },
   "scripts": {
