--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.3",
     "sequelize": "^6.17.0",
     "uniqid": "^5.4.0",
     "uuid": "^8.3.2"
